@@ -2,29 +2,29 @@ package ducknetwork.gui;
 
 import ducknetwork.domain.Message;
 import ducknetwork.domain.User;
+import ducknetwork.domain.ReplyMessage;
 import ducknetwork.service.NetworkService;
+import ducknetwork.util.Observer;
+import javafx.application.Platform;
 import javafx.collections.FXCollections;
 import javafx.fxml.FXML;
-import javafx.scene.control.ListView;
-import javafx.scene.control.TextArea;
-import ducknetwork.domain.ReplyMessage;
-
+import javafx.scene.control.*;
+import java.util.Collections;
 import java.util.List;
 
-public class ChatController {
-    private final NetworkService service = new NetworkService();
-
+public class ChatController implements Observer {
+    private final NetworkService service = NetworkService.getInstance();
     private User currentUser;
     private User chatPartner;
+    private Message selectedMessageForReply = null;
 
     @FXML private ListView<String> messageList;
     @FXML private TextArea inputMessage;
 
-    private Message selectedMessageForReply = null;
-
-    public void setChatData(User currentUser, User chatPartner) {
-        this.currentUser = currentUser;
-        this.chatPartner = chatPartner;
+    public void setChatData(User current, User partner) {
+        this.currentUser = current;
+        this.chatPartner = partner;
+        service.addObserver(this);
         loadMessages();
 
         messageList.getSelectionModel().selectedItemProperty().addListener((obs, oldVal, newVal) -> {
@@ -39,32 +39,29 @@ public class ChatController {
         });
     }
 
+    @Override
+    public void update() { Platform.runLater(this::loadMessages); }
+
     private void loadMessages() {
         List<Message> messages = service.getConversation(currentUser.getId(), chatPartner.getId());
         messageList.getItems().clear();
         for (Message m : messages) {
             String prefix = m.getFrom().getId().equals(currentUser.getId()) ? "Eu" : chatPartner.getUsername();
-            String replyText = "";
-            if (m instanceof ReplyMessage) {
-                Message original = ((ReplyMessage) m).getReply();
-                if (original != null) {
-                    replyText = " [Reply to: " + original.getMessage() + "] ";
-                }
-            }
+            String replyText = (m instanceof ReplyMessage && ((ReplyMessage) m).getReply() != null)
+                    ? " [Reply to: " + ((ReplyMessage) m).getReply().getMessage() + "] " : "";
             messageList.getItems().add(prefix + replyText + ": " + m.getMessage());
         }
-        messageList.scrollTo(messageList.getItems().size() - 1);
+        if (!messageList.getItems().isEmpty()) messageList.scrollTo(messageList.getItems().size() - 1);
     }
 
     @FXML
     private void handleSendMessage() {
         String text = inputMessage.getText().trim();
         if (!text.isEmpty()) {
-            service.sendMessage(currentUser.getId(), List.of(chatPartner.getEmail()), text, selectedMessageForReply);
+            service.sendMessage(currentUser.getId(), Collections.singletonList(chatPartner.getEmail()), text, selectedMessageForReply);
             inputMessage.clear();
             inputMessage.setPromptText("Scrie un mesaj...");
             selectedMessageForReply = null;
-            loadMessages();
         }
     }
 }
